# cmake_minimum_required(VERSION 3.14)
# project(StructuresLib)

# # Include directories
# include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)

# # Automatically find all .cpp files in the src directory and its subdirectories
# file(GLOB_RECURSE STRUCTURES_SRC "src/*.cpp")

# # Add source files for the data structures
# add_library(structures ${STRUCTURES_SRC})

# # Link Google Test libraries for testing purposes (if needed)
# # target_link_libraries(structures gtest gtest_main)
